test/compile_errors/err_legacy_struct_equals.w
//! expect-error: drop '=' in struct type declarations
type Point = { x: i32, y: i32 }

fn main:
    let _ = Point { x: 1, y: 2 }
